p-58rq9-pipeline/docker-registry.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  labels:
    cattle.io/creator: norman
  name: docker-registry
  namespace: p-58rq9-pipeline
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: docker-registry
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: docker-registry
      name: docker-registry
    spec:
      containers:
      - env:
        - name: REGISTRY_HTTP_ADDR
          value: 0.0.0.0:443
        - name: REGISTRY_HTTP_TLS_CERTIFICATE
          value: /opt/crt/client.cert
        - name: REGISTRY_HTTP_TLS_KEY
          value: /opt/crt/client.key
        - name: REGISTRY_AUTH
          value: htpasswd
        - name: REGISTRY_AUTH_HTPASSWD_REALM
          value: Registry Realm
        - name: REGISTRY_AUTH_HTPASSWD_PATH
          value: /opt/auth/registry-token
        image: registry:2
        imagePullPolicy: Always
        name: docker-registry
        ports:
        - containerPort: 443
          name: docker-registry
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/crt/
          name: crt
          readOnly: true
        - mountPath: /opt/auth/
          name: auth
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: crt
        secret:
          defaultMode: 420
          secretName: registry-crt
      - name: auth
        secret:
          defaultMode: 420
          items:
          - key: registry-token
            path: registry-token
          secretName: pipeline-secret
