p-58rq9-pipeline/minio.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  labels:
    cattle.io/creator: norman
  name: minio
  namespace: p-58rq9-pipeline
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minio
      name: minio
    spec:
      containers:
      - args:
        - server
        - /data
        image: minio/minio:RELEASE.2018-05-25T19-49-13Z
        imagePullPolicy: Always
        name: minio
        ports:
        - containerPort: 9000
          name: minio
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
