p-58rq9-pipeline/jenkins.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cattle.io/creator: norman
  name: jenkins
  namespace: p-58rq9-pipeline
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: agent
    port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: jenkins
    jenkins: master
  sessionAffinity: None
  type: ClusterIP
